# yava

./: .gitignore  first.json  generate_xlm.ipynb  generator1.ipynb  pyproject.toml  step1.ipynb
config/: config.ipynb  tools.ipynb
frontend/: package-lock.json  package.json
prompts/planning/: planning.md
prompts/reflection/: check.md  check.txt  reviewer.md  writer.md
tasks/: config.ipynb  generate from list.ipynb  recognition.ipynb  synthetic.ipynb  synthetic.py  task agent.ipynb  tasks-1.json  tasks-10.json  tasks-2.json  tasks-3.json  tasks-4.json  tasks-5.json  tasks-6.json  tasks-7.json  tasks-8.json  tasks-9.json  utils.py
tests/: test_xml.py
yava/: models.py  planning.py  prompts.py  reflection.py  tools.py
