[tool.poetry]
name = "yava"
version = "0.0.1"
description = "YAVA - attempt to create generic report generator"
authors = ["Boris Tvaroska <boris@tvaroska.sk>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
vertexai = "1.60.0"
langchain-core = "0.2.32"
langchain-google-vertexai = "1.0.8"
anthropic = {version = "0.34.0", extras = ["vertexai"]}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
