[tool.poetry]
name = "yava"
version = "0.0.1"
description = "YAVA - attempt to create generic report generator"
authors = ["Boris Tvaroska <boris@tvaroska.sk>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain-core = ">=0.3.0,<0.4.0"
langchain-community = ">=0.3.0,<0.4.0"
langgraph = ">=0.2.21"
vertexai = ">=1.66.0"
anthropic = {extras = ["vertexai"], version = ">=0.36.0,<1.0.0"}
langchain-google-vertexai = ">=2.0.0"
promptgit = ">=0.2.0"
google-cloud-storage = "^2.18.2"
python-dateutil = ">=2.9.0"
tqdm = "^4.66.5"
[tool.poetry.group.dev.dependencies]
jupyterlab = ">=4.2.4"
ipywidgets = ">=8.1.3"
black = ">=24.8.0"
isort = ">=5.13.2"
pytest = ">=8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
